--- a/ballet/styles/style.css
+++ b/ballet/styles/style.css
@@ -594,7 +594,7 @@ footer p a:hover {
         display: none;
     }
 
-    main h1, h2, h3, h4, .heading, .firstletter, .title{
+    main h1, h2, h3, h4, .heading, .firstletter, .title, footer p{
         font-size: 20px;
         width: 80%; 
 
