added to my homepage

--- a/ballet/styles/style.css
+++ b/ballet/styles/style.css
@@ -606,8 +606,13 @@ footer p a:hover {
         width: 80%; 
     }
 
-    main img, p ,ol ,li ul , .tendu p, main figure>img, main figure>figcaption,  main figure> p,.bun-img img, .shoes-img img, .pile-img img, .pile-img2 img, .tendu-img img, .tendu-img2 img, .fade img, .music img, .music p{
+    main img, main figure>img, .bun-img img, .shoes-img img, .pile-img img, .pile-img2 img, .tendu-img img, .tendu-img2 img, .fade img, .music img{
         border: 1px solid #e15a97;
+        display: block;
+        width:80%;
+    }
+
+    p ,ol ,li ul , .tendu p, main figure>figcaption,  main figure> p, .music p{
         display: block;
         width:80%;
         font-size: 14px;
