--- a/ballet/styles/style.css
+++ b/ballet/styles/style.css
@@ -612,7 +612,7 @@ footer p a:hover {
         width:80%;
     }
 
-    p ,ol ,li ul , .tendu p, main figure>figcaption,  main figure> p, .music p{
+    p ,ol ,li ul , .tendu p, main figure>figcaption,  main figure> p, .music p, .fundation-ballet p, .benefits-ballet p{
         display: block;
         width:80%;
         font-size: 14px;
