--- a/ballet/styles/style.css
+++ b/ballet/styles/style.css
@@ -614,7 +614,7 @@ footer p a:hover {
     }
 
     p ,ol ,li ul , .tendu p, main figure>figcaption,  main figure> p, .music p, .fundation-ballet p, .benefits-ballet p, .fundation p,.tendu-img2 p, .dress-msg p, .bun-msg p, .shoes-msg p, .tendu-msg p, .slide__pagenumber {
-        padding: 0 auto;
+        padding: 0 ;
         margin: 0 auto;
         display: block;
         width:80%;
@@ -627,7 +627,7 @@ footer p a:hover {
     .fundation,.benefits,  .fundation-ballet, .benefits-ballet, .dress, .bun , .terms, .shoes, .hand, .feet, .grand, .movement,.movement div, #exercise, #port , #pile, #eleves, #tendu ,#degages ,#round ,#sautes, #demi, #grand { 
         display: block;
         height: auto;
-        padding: 0 auto;
+        padding: 0;
         margin: 0 auto;
         width: 80%;
         align-items: baseline;
@@ -637,7 +637,7 @@ footer p a:hover {
 
     .dress-img,.bun-img, .shoes-img, .hand-img, .feet-img, .fundation-img, .terms-img, .pile-img, .tendu-img, .sautes-img .port img,  .eleves img, .degages img, .round img, .pile-img2, .tendu-img2, .tendu-img, .tendu-img2  { 
         margin: 0 auto;
-        padding: 0 auto;
+        padding: 0 ;
         width: 60%;
         
     }
