--- a/ballet/styles/style.css
+++ b/ballet/styles/style.css
@@ -609,12 +609,21 @@ footer p a:hover {
         width:80%;
     }
 
-    p ,ol ,li ul , .tendu p, main figure>figcaption,  main figure> p, .music p, .fundation-ballet p, .benefits-ballet p, .fundation p,.tendu-img2 p, .dress-msg p, .bun-msg p, .shoes-msg p, .tendu-msg p, .slide__pagenumber {
+    p ,ol ,li ul , .tendu p,  main figure> p, .music p, .fundation-ballet p, .benefits-ballet p, .fundation p,.tendu-img2 p, .dress-msg p, .bun-msg p, .shoes-msg p, .tendu-msg p, .slide__pagenumber {
         padding: 0 ;
         margin: 0 auto;
         display: block;
         width:80%;
         font-size: 14px;
+    }
+
+    figcaption{
+        padding: 0 ;
+        margin: 0 auto;
+        display: block;
+        width:80%;
+        font-size: 14px;
+
     }
     .home-title {
         font-size: 20px;
