--- a/ballet/styles/style.css
+++ b/ballet/styles/style.css
@@ -619,9 +619,9 @@ footer p a:hover {
     }
 
     p ,ol ,li ul , .tendu p,  main figure> p, .music p, .fundation-ballet p, .benefits-ballet p, .fundation p,.tendu-img2 p, .dress-msg p, .bun-msg p, .shoes-msg p, .tendu-msg p, .slide__pagenumber {
-        padding: 0 ;
-        margin: 0 auto;
-        display: block;
+        /* padding: 0 ;
+        margin: 0 ;
+        display: block; */
         width:80%;
         font-size: 14px;
     }
@@ -642,7 +642,7 @@ footer p a:hover {
     }
 
     .dress-img,.bun-img, .shoes-img, .hand-img, .feet-img, .fundation-img, .terms-img, .pile-img, .tendu-img, .sautes-img .port img,  .eleves img, .degages img, .round img, .pile-img2, .tendu-img2, .tendu-img, .tendu-img2  { 
-        margin: 0 auto;
+        margin: 0 ;
         padding: 0 ;
         width: 60%;
         
@@ -650,7 +650,7 @@ footer p a:hover {
 
     .dress-msg, .bun-msg, .shoes-msg, .hand-msg, .feet-msg, .pile-msg, .tendu-msg, .sautes-msg, .port-msg, .eleves-msg, .degages-msg, .round-msg , .music-msg{
         height: auto;
-        margin: 0 auto;
+        margin: 0 ;
         width: 80%;
     }
 
