added to my homepage

--- a/ballet/styles/style.css
+++ b/ballet/styles/style.css
@@ -387,7 +387,7 @@ to {opacity: 1}
 
 .bun-msg {
     margin-top: 10px;
-    padding-top: 100px;
+    padding-top: 10px;
     padding-left: 10px;
     grid-column: 2/3;
     grid-row: 3/4;
@@ -658,7 +658,7 @@ footer p a:hover {
         width: 80%;
         height: 80%;
         display: block;
-        margin: 0 auto;
+        margin: 0 ;
     }
 
     footer {
