--- a/ballet/styles/style.css
+++ b/ballet/styles/style.css
@@ -620,8 +620,8 @@ footer p a:hover {
 
     p ,ol ,li ul , .tendu p,  main figure> p, .music p, .fundation-ballet p, .benefits-ballet p, .fundation p,.tendu-img2 p, .dress-msg p, .bun-msg p, .shoes-msg p, .tendu-msg p, .slide__pagenumber {
         padding: 0 ;
-        /* margin: 0 ; */
-        /* display: block; */
+        margin: 0 ;
+        display: block;
         width:80%;
         font-size: 14px;
     }
