--- a/ballet/styles/style.css
+++ b/ballet/styles/style.css
@@ -645,17 +645,19 @@ footer p a:hover {
         margin: 0 ;
         padding: 0 ;
         width: 60%;
+        align-items: baseline;
+        justify-self: baseline;
         
     }
 
-    .dress-msg, .bun-msg, .shoes-msg, .hand-msg, .feet-msg, .pile-msg, .tendu-msg, .sautes-msg, .port-msg, .eleves-msg, .degages-msg, .round-msg , .music-msg{
+    .dress-msg, .bun-msg, .shoes-msg, .hand-msg, .feet-msg, .pile-msg, .tendu-msg, .sautes-msg, .port-msg, .eleves-msg, .degages-msg, .round-msg {
         height: auto;
         margin: 0 ;
         padding: 0 ;
         width: 80%;
     }
 
-    .music img, .image, .fade{
+    .music img, .image, .fade, .music-msg{
         width: 80%;
         height: 80%;
         display: block;
