--- a/ballet/styles/style.css
+++ b/ballet/styles/style.css
@@ -84,6 +84,7 @@ nav a:hover {
     display: grid;
     grid-template-columns: repeat(10, 1fr);
     margin-top: 10px;
+    padding: 10px;
     color: #6d98ba;
     font-size: 1em;
     justify-content: center;
@@ -117,7 +118,8 @@ main h1, h2, h3, h4, .heading, .firstletter  {
 
 main img{
     border: 10px solid #e15a97;
-    width: 1600px;
+    /* max-width: 100%; */
+    width: 100%;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #6f7364;
 }
@@ -140,11 +142,13 @@ main img:hover {
 
 
 .fundation {
+    padding: 0 10px 0 10px;
     grid-row: 1/2;
     grid-column: 1/11;
 }
 
 .benefits {
+    padding: 0 10px 0 10px;
     margin-top: 10px;
     grid-row: 2/5;
     grid-column: 1/11;
@@ -152,7 +156,8 @@ main img:hover {
 
 .fundation p, .benefits p , .dress-msg p{
     grid-column: 1/11;
-    padding-top: 2px;
+    /* padding-top: 2px; */
+    padding: 2px 10px 0 10px;
     font-family: "Playfair Display", sans-serif, Helvetica;
     /* font-size: 30px; */
     color: #6d98ba;
