--- a/practice/styles/grid.css
+++ b/practice/styles/grid.css
@@ -5,132 +5,133 @@ START grid layout extra credit
 /* Use the align-items: center to center the text vertically in each row */
 /*Add padding around all grids of 1rem*/
 * {
-    align-items: center;
     box-sizing: border-box;
-
-    /* padding: 1rem; */
-
 }
 
 /* Choose any colors you want for each of the display:grid elements */
 /* Grids 1 – 5 are 12 columns */
 /* • Grid 1 has padding top and bottom of 2em */
 .grid1 {
-
-    padding-top: 2em;
-    padding-bottom: 2em;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: 1fr 1fr 1fr 4fr;
+    /* grid-template-rows: 1fr 1fr 1fr 4fr; */
     background-color:yellowgreen;
-    align-items: start;
-
+    padding: 2em 0;
+    box-sizing: border-box;
 }
 
 /* Grid 1 heading is h1 */
 .grid1 h1 {
-    text-align: left;
+    grid-column: 1/13;
     font-size: 2em;
     font-weight: bold;
 }
 
 .grid2 {
-
     background-color:pink;
-    grid-column: 2/10;
-    grid-row: 2/3;
+    grid-column: 2/11;
     display:grid;
     grid-template-columns: repeat(2, 1fr);
- 
-
 }
-
-
 /* Grid 2, 4, 5 text are h2 */
 .grid2 h2 {
+    grid-column: 1/2;
     text-align: center;
-    font-size: 1em;
+    font-size: 1.5em;
 }
 
 .grid3 {
-    padding: 0;
     background-color:blanchedalmond;
     grid-column: 2/3;
-
 }
 
 /* Grid 3, 6, 7 are h3 */
 .grid3 h3 {
-    
+    grid-column: 2/3;
+    text-align: left;
+    font-size: 1.5em; 
 }
 
 .grid4 {
     background-color:burlywood;
-    grid-column: 5/10;
-    grid-row: 3/4;
+    grid-column: 4/11;
+    padding: 1em 0;
 }
 
 /* Grid 2, 4, 5 text are h2 */
 .grid4 h2 {
-
+    grid-column: 4/11;
+    text-align: left;
+    font-size: 1.5em; 
 }
 
-/* Grid for the Fieldset inside the form is 6 columns (1fr 5fr) */
+/* Grid for the Fieldset inside the form is 6 columns */
 section {
+    grid-column: 2/9;
     display: grid;
-    grid-template-columns: 1fr 5fr;   
-    background-color:grey; 
-    
+    grid-template-columns: repeat(12, 1fr);     
+    background-color:floralwhite; 
+    padding: 3em 0;
 }
 
 /* Grid 2, 4, 5 text are h2 */
 section h2 {
+    grid-column: 1/13;
+    text-align: left;
+    font-size: 1.5em; 
 
-    
 }
 
 form {
-  
-    background-color: peru;
+    grid-column: 2/7;
+    background-color:bisque;
+}
+
+fieldset {
+    display: grid;
+    grid-template-columns: 1fr 5fr;
 }
 
 legend {
- 
-    font-size: 1em;
-    font-weight: bold;
+    font-size: 20px;
+    font-weight: 700;
 }
-
 
 /* • Div inside fieldset is 3 columns (1fr 2fr) Grid-gap: 0 1em; */
 
 fieldset>div {
-
+    grid-column: 1/3;
     display: grid;
     grid-template-columns: 1fr 2fr;
-    Grid-gap: 0 1em
+    Grid-gap: 0 1em;
+    align-items: center;
 
 }
 /* Form labels are right aligned */
 label {
-    
-    text-align: right;
-    /* background-color: peru; */
+    grid-column: 1/2;
+    justify-self: end;
+
 }
 
 /* Field Input are left aligned and width is 100% */
 input {
-    width:100%;
-    text-align: left;
-    
+    grid-column: 2/3;
+    margin: 1em 0;
+    text-align: left;   
 }
 
 button {
     background-color:aquamarine;
-
+    grid-column: 1/3;
+    width:100%;
+    font-size: 2em;
 }
 
 
 section>div {
-
-
+    width: 100%;
+    grid-column: 1/3;
+    padding: 3em 0;
+    justify-items: center;
 }
